blog/infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clients
  template:
    metadata:
      labels:
        app: clients
    spec:
      containers:
        - name: clients
          image: nivedpk/clients

---
apiVersion: v1
kind: Service
metadata:
  name: clients-serv
spec:
    selector:
        app: clients
    ports:
      - name : clients
        protocol: TCP
        port: 3000
        targetPort: 3000
